src/objects/sked_Shift_Type_Setting__mdt.object
<CustomObject>
    <fields>
        <fullName>sked_Available_End__c</fullName>
        <defaultValue>1900</defaultValue>
        <label>Available End</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sked_Available_Start__c</fullName>
        <defaultValue>800</defaultValue>
        <label>Available Start</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sked_Background_Color__c</fullName>
        <label>Background Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sked_Can_Be_Pre_dated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Can Be Pre-dated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sked_Category__c</fullName>
        <description>This could be an object such as availability, activity or job status</description>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>availability</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>activity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>job</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>shift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>clientAvailability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>jobStatus</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>sked_Color__c</fullName>
        <label>Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sked_Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sked_Is_Available__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sked_Item__c</fullName>
        <label>Item</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sked_Short_Name__c</fullName>
        <label>Short Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sked_Show_Legend__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show Legend</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sked_Step__c</fullName>
        <defaultValue>30</defaultValue>
        <label>Step</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Skedulo Shift Type Setting</label>
    <listViews>
        <fullName>All_Settings</fullName>
        <columns>MasterLabel</columns>
        <columns>sked_Category__c</columns>
        <columns>DeveloperName</columns>
        <columns>sked_Item__c</columns>
        <columns>sked_Short_Name__c</columns>
        <columns>sked_Background_Color__c</columns>
        <columns>sked_Color__c</columns>
        <columns>sked_Can_Be_Pre_dated__c</columns>
        <columns>sked_Show_Legend__c</columns>
        <columns>sked_Is_Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Settings</label>
    </listViews>
    <pluralLabel>Skedulo Shift Type Settings</pluralLabel>
</CustomObject>